[new]AI Menu
