# backend/api/base/system_grpc.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-grpc v1.5.1
-// - protoc             v5.29.3
+// - protoc             v3.21.12
 // source: api/base/system.proto
 
 package base
@@ -20,8 +20,12 @@ import (
 const _ = grpc.SupportPackageIsVersion9
 
 const (
-	System_Menu_FullMethodName    = "/base.System/Menu"
-	System_AllMenu_FullMethodName = "/base.System/AllMenu"
+	System_Menu_FullMethodName          = "/base.System/Menu"
+	System_AllMenu_FullMethodName       = "/base.System/AllMenu"
+	System_AddSysMenu_FullMethodName    = "/base.System/AddSysMenu"
+	System_UpdateSysMenu_FullMethodName = "/base.System/UpdateSysMenu"
+	System_DeleteSysMenu_FullMethodName = "/base.System/DeleteSysMenu"
+	System_GetSysMenu_FullMethodName    = "/base.System/GetSysMenu"
 )
 
 // SystemClient is the client API for System service.
@@ -33,6 +37,14 @@ type SystemClient interface {
 	// menu
 	Menu(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*MenuReply, error)
 	AllMenu(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*AllMenuReply, error)
+	// sysMenu
+	AddSysMenu(ctx context.Context, in *AddSysMenuRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
+	// UpdateSysMenu implements base.SysMenuRepo.
+	UpdateSysMenu(ctx context.Context, in *AddSysMenuRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
+	// DeleteSysMenu implements base.SysMenuRepo.
+	DeleteSysMenu(ctx context.Context, in *DeleteSysMenuRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
+	// GetSysMenu implements base.SysMenuRepo.
+	GetSysMenu(ctx context.Context, in *GetSysMenuRequest, opts ...grpc.CallOption) (*MenuItem, error)
 }
 
 type systemClient struct {
@@ -63,6 +75,46 @@ func (c *systemClient) AllMenu(ctx context.Context, in *emptypb.Empty, opts ...g
 	return out, nil
 }
 
+func (c *systemClient) AddSysMenu(ctx context.Context, in *AddSysMenuRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(emptypb.Empty)
+	err := c.cc.Invoke(ctx, System_AddSysMenu_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *systemClient) UpdateSysMenu(ctx context.Context, in *AddSysMenuRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(emptypb.Empty)
+	err := c.cc.Invoke(ctx, System_UpdateSysMenu_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *systemClient) DeleteSysMenu(ctx context.Context, in *DeleteSysMenuRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(emptypb.Empty)
+	err := c.cc.Invoke(ctx, System_DeleteSysMenu_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *systemClient) GetSysMenu(ctx context.Context, in *GetSysMenuRequest, opts ...grpc.CallOption) (*MenuItem, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(MenuItem)
+	err := c.cc.Invoke(ctx, System_GetSysMenu_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // SystemServer is the server API for System service.
 // All implementations must embed UnimplementedSystemServer
 // for forward compatibility.
@@ -72,6 +124,14 @@ type SystemServer interface {
 	// menu
 	Menu(context.Context, *emptypb.Empty) (*MenuReply, error)
 	AllMenu(context.Context, *emptypb.Empty) (*AllMenuReply, error)
+	// sysMenu
+	AddSysMenu(context.Context, *AddSysMenuRequest) (*emptypb.Empty, error)
+	// UpdateSysMenu implements base.SysMenuRepo.
+	UpdateSysMenu(context.Context, *AddSysMenuRequest) (*emptypb.Empty, error)
+	// DeleteSysMenu implements base.SysMenuRepo.
+	DeleteSysMenu(context.Context, *DeleteSysMenuRequest) (*emptypb.Empty, error)
+	// GetSysMenu implements base.SysMenuRepo.
+	GetSysMenu(context.Context, *GetSysMenuRequest) (*MenuItem, error)
 	mustEmbedUnimplementedSystemServer()
 }
 
@@ -87,6 +147,18 @@ func (UnimplementedSystemServer) Menu(context.Context, *emptypb.Empty) (*MenuRep
 }
 func (UnimplementedSystemServer) AllMenu(context.Context, *emptypb.Empty) (*AllMenuReply, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method AllMenu not implemented")
+}
+func (UnimplementedSystemServer) AddSysMenu(context.Context, *AddSysMenuRequest) (*emptypb.Empty, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method AddSysMenu not implemented")
+}
+func (UnimplementedSystemServer) UpdateSysMenu(context.Context, *AddSysMenuRequest) (*emptypb.Empty, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method UpdateSysMenu not implemented")
+}
+func (UnimplementedSystemServer) DeleteSysMenu(context.Context, *DeleteSysMenuRequest) (*emptypb.Empty, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method DeleteSysMenu not implemented")
+}
+func (UnimplementedSystemServer) GetSysMenu(context.Context, *GetSysMenuRequest) (*MenuItem, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetSysMenu not implemented")
 }
 func (UnimplementedSystemServer) mustEmbedUnimplementedSystemServer() {}
 func (UnimplementedSystemServer) testEmbeddedByValue()                {}
@@ -145,6 +217,78 @@ func _System_AllMenu_Handler(srv interface{}, ctx context.Context, dec func(inte
 	return interceptor(ctx, in, info, handler)
 }
 
+func _System_AddSysMenu_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(AddSysMenuRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(SystemServer).AddSysMenu(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: System_AddSysMenu_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(SystemServer).AddSysMenu(ctx, req.(*AddSysMenuRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _System_UpdateSysMenu_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(AddSysMenuRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(SystemServer).UpdateSysMenu(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: System_UpdateSysMenu_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(SystemServer).UpdateSysMenu(ctx, req.(*AddSysMenuRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _System_DeleteSysMenu_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DeleteSysMenuRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(SystemServer).DeleteSysMenu(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: System_DeleteSysMenu_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(SystemServer).DeleteSysMenu(ctx, req.(*DeleteSysMenuRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _System_GetSysMenu_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetSysMenuRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(SystemServer).GetSysMenu(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: System_GetSysMenu_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(SystemServer).GetSysMenu(ctx, req.(*GetSysMenuRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // System_ServiceDesc is the grpc.ServiceDesc for System service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -159,6 +303,22 @@ var System_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "AllMenu",
 			Handler:    _System_AllMenu_Handler,
+		},
+		{
+			MethodName: "AddSysMenu",
+			Handler:    _System_AddSysMenu_Handler,
+		},
+		{
+			MethodName: "UpdateSysMenu",
+			Handler:    _System_UpdateSysMenu_Handler,
+		},
+		{
+			MethodName: "DeleteSysMenu",
+			Handler:    _System_DeleteSysMenu_Handler,
+		},
+		{
+			MethodName: "GetSysMenu",
+			Handler:    _System_GetSysMenu_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
