# backend/api/base/system_http.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-http. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-http v2.8.4
-// - protoc             v5.29.3
+// - protoc-gen-go-http v2.9.0
+// - protoc             v3.21.12
 // source: api/base/system.proto
 
 package base
@@ -20,19 +20,35 @@ var _ = binding.EncodeURL
 
 const _ = http.SupportPackageIsVersion1
 
+const OperationSystemAddSysMenu = "/base.System/AddSysMenu"
 const OperationSystemAllMenu = "/base.System/AllMenu"
+const OperationSystemDeleteSysMenu = "/base.System/DeleteSysMenu"
+const OperationSystemGetSysMenu = "/base.System/GetSysMenu"
 const OperationSystemMenu = "/base.System/Menu"
+const OperationSystemUpdateSysMenu = "/base.System/UpdateSysMenu"
 
 type SystemHTTPServer interface {
+	// AddSysMenu sysMenu
+	AddSysMenu(context.Context, *AddSysMenuRequest) (*emptypb.Empty, error)
 	AllMenu(context.Context, *emptypb.Empty) (*AllMenuReply, error)
+	// DeleteSysMenu DeleteSysMenu implements base.SysMenuRepo.
+	DeleteSysMenu(context.Context, *DeleteSysMenuRequest) (*emptypb.Empty, error)
+	// GetSysMenu GetSysMenu implements base.SysMenuRepo.
+	GetSysMenu(context.Context, *GetSysMenuRequest) (*MenuItem, error)
 	// Menu menu
 	Menu(context.Context, *emptypb.Empty) (*MenuReply, error)
+	// UpdateSysMenu UpdateSysMenu implements base.SysMenuRepo.
+	UpdateSysMenu(context.Context, *AddSysMenuRequest) (*emptypb.Empty, error)
 }
 
 func RegisterSystemHTTPServer(s *http.Server, srv SystemHTTPServer) {
 	r := s.Route("/")
 	r.GET("/system/menu", _System_Menu0_HTTP_Handler(srv))
 	r.GET("/system/menu/list", _System_AllMenu0_HTTP_Handler(srv))
+	r.POST("/system/menu", _System_AddSysMenu0_HTTP_Handler(srv))
+	r.PUT("/system/menu", _System_UpdateSysMenu0_HTTP_Handler(srv))
+	r.DELETE("/system/menu/{id}", _System_DeleteSysMenu0_HTTP_Handler(srv))
+	r.GET("/system/menu/{id}", _System_GetSysMenu0_HTTP_Handler(srv))
 }
 
 func _System_Menu0_HTTP_Handler(srv SystemHTTPServer) func(ctx http.Context) error {
@@ -73,9 +89,106 @@ func _System_AllMenu0_HTTP_Handler(srv SystemHTTPServer) func(ctx http.Context) 
 	}
 }
 
+func _System_AddSysMenu0_HTTP_Handler(srv SystemHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in AddSysMenuRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationSystemAddSysMenu)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.AddSysMenu(ctx, req.(*AddSysMenuRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*emptypb.Empty)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _System_UpdateSysMenu0_HTTP_Handler(srv SystemHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in AddSysMenuRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationSystemUpdateSysMenu)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.UpdateSysMenu(ctx, req.(*AddSysMenuRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*emptypb.Empty)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _System_DeleteSysMenu0_HTTP_Handler(srv SystemHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in DeleteSysMenuRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationSystemDeleteSysMenu)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.DeleteSysMenu(ctx, req.(*DeleteSysMenuRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*emptypb.Empty)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _System_GetSysMenu0_HTTP_Handler(srv SystemHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetSysMenuRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationSystemGetSysMenu)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetSysMenu(ctx, req.(*GetSysMenuRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*MenuItem)
+		return ctx.Result(200, reply)
+	}
+}
+
 type SystemHTTPClient interface {
+	// AddSysMenu sysMenu
+	AddSysMenu(ctx context.Context, req *AddSysMenuRequest, opts ...http.CallOption) (rsp *emptypb.Empty, err error)
 	AllMenu(ctx context.Context, req *emptypb.Empty, opts ...http.CallOption) (rsp *AllMenuReply, err error)
+	// DeleteSysMenu DeleteSysMenu implements base.SysMenuRepo.
+	DeleteSysMenu(ctx context.Context, req *DeleteSysMenuRequest, opts ...http.CallOption) (rsp *emptypb.Empty, err error)
+	// GetSysMenu GetSysMenu implements base.SysMenuRepo.
+	GetSysMenu(ctx context.Context, req *GetSysMenuRequest, opts ...http.CallOption) (rsp *MenuItem, err error)
+	// Menu menu
 	Menu(ctx context.Context, req *emptypb.Empty, opts ...http.CallOption) (rsp *MenuReply, err error)
+	// UpdateSysMenu UpdateSysMenu implements base.SysMenuRepo.
+	UpdateSysMenu(ctx context.Context, req *AddSysMenuRequest, opts ...http.CallOption) (rsp *emptypb.Empty, err error)
 }
 
 type SystemHTTPClientImpl struct {
@@ -84,6 +197,20 @@ type SystemHTTPClientImpl struct {
 
 func NewSystemHTTPClient(client *http.Client) SystemHTTPClient {
 	return &SystemHTTPClientImpl{client}
+}
+
+// AddSysMenu sysMenu
+func (c *SystemHTTPClientImpl) AddSysMenu(ctx context.Context, in *AddSysMenuRequest, opts ...http.CallOption) (*emptypb.Empty, error) {
+	var out emptypb.Empty
+	pattern := "/system/menu"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationSystemAddSysMenu))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
 }
 
 func (c *SystemHTTPClientImpl) AllMenu(ctx context.Context, in *emptypb.Empty, opts ...http.CallOption) (*AllMenuReply, error) {
@@ -99,6 +226,35 @@ func (c *SystemHTTPClientImpl) AllMenu(ctx context.Context, in *emptypb.Empty, o
 	return &out, nil
 }
 
+// DeleteSysMenu DeleteSysMenu implements base.SysMenuRepo.
+func (c *SystemHTTPClientImpl) DeleteSysMenu(ctx context.Context, in *DeleteSysMenuRequest, opts ...http.CallOption) (*emptypb.Empty, error) {
+	var out emptypb.Empty
+	pattern := "/system/menu/{id}"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationSystemDeleteSysMenu))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "DELETE", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// GetSysMenu GetSysMenu implements base.SysMenuRepo.
+func (c *SystemHTTPClientImpl) GetSysMenu(ctx context.Context, in *GetSysMenuRequest, opts ...http.CallOption) (*MenuItem, error) {
+	var out MenuItem
+	pattern := "/system/menu/{id}"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationSystemGetSysMenu))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// Menu menu
 func (c *SystemHTTPClientImpl) Menu(ctx context.Context, in *emptypb.Empty, opts ...http.CallOption) (*MenuReply, error) {
 	var out MenuReply
 	pattern := "/system/menu"
@@ -106,6 +262,20 @@ func (c *SystemHTTPClientImpl) Menu(ctx context.Context, in *emptypb.Empty, opts
 	opts = append(opts, http.Operation(OperationSystemMenu))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// UpdateSysMenu UpdateSysMenu implements base.SysMenuRepo.
+func (c *SystemHTTPClientImpl) UpdateSysMenu(ctx context.Context, in *AddSysMenuRequest, opts ...http.CallOption) (*emptypb.Empty, error) {
+	var out emptypb.Empty
+	pattern := "/system/menu"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationSystemUpdateSysMenu))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "PUT", path, in, &out, opts...)
 	if err != nil {
 		return nil, err
 	}
